[package]
name = "rustypwd_g"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustypwd = { path = ".." }
structopt = "0.3.26"
arboard = "3.1.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"