[package]
name = "rustypwd_m"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustypwd = { path = ".." }
arboard = "3.1.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
chrono =  { version = "0.4.19", features = ["serde"] }
uuid =  { version = "1.1.2", features = ["serde", "v4"] }
crossterm = "0.25.0"
inquire = "0.3.0"
secstr = "0.5.0"
anyhow = "1.0.58"